// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search > search of 'meta' > with a filter 1`] = `
[
  "meta",
]
`;

exports[`Search > search of 'meta' > with a filter that has no value 1`] = `
[
  "meta",
  "meta",
]
`;

exports[`Search > search of 'meta' > with multiple filters of same type 1`] = `
[
  "meta",
  "mvra",
  "leva",
  "mehd",
  "mstv",
  "ipma",
  "xml ",
  "pitm",
  "schm",
  "uriI",
  "iinf",
  "csch",
  "csgp",
  "stz2",
  "dhec",
  "txtC",
  "svmC",
  "saio",
  "saiz",
  "mvhd",
  "infe",
  "mfhd",
  "tfhd",
  "trun",
  "mdhd",
  "sthd",
  "vvnC",
  "tfdt",
  "tfra",
  "stco",
  "dref",
  "mfro",
  "tkhd",
  "hmhd",
  "nmhd",
  "stss",
  "smhd",
  "vmhd",
  "stts",
]
`;

exports[`Search > search of 'meta' > without any filters 1`] = `
[
  "meta",
  "meta",
]
`;

exports[`Search > search with container filter > #VisualSampleEntry > '' 1`] = `
[
  "amve",
  "auxi",
  "avcC",
  "btrt",
  "cclv",
  "ccst",
  "clap",
  "clli",
  "colr",
  "csch",
  "free",
  "frma",
  "hvcC",
  "lhvC",
  "mdcv",
  "pasp",
  "rinf",
  "schi",
  "schm",
  "scrb",
  "seii",
  "sinf",
  "skip",
  "stvi",
  "uuid",
]
`;

exports[`Search > search with container filter > $avcC > '' 1`] = `
[
  "free",
  "skip",
  "uuid",
]
`;

exports[`Search > search with container filter > $file > $meta > 'idat' 1`] = `
[
  "idat",
]
`;

exports[`Search > search with container filter > $moov > $meta > 'xml' 1`] = `
[
  "xml ",
  "bxml",
]
`;

exports[`Search > search with container filter > (exact) $file > $moov > 'trak' 1`] = `
[
  "trak",
]
`;

exports[`Search > search with container filter > (exact) $moov > $trak > $meta > 'hdlr' 1`] = `
[
  "hdlr",
]
`;

exports[`Search > search with container filter > (exact) $trak > '' 1`] = `
[
  "edts",
  "free",
  "mdia",
  "meta",
  "skip",
  "tkhd",
  "tref",
  "trgr",
  "ttyp",
  "udta",
  "uuid",
]
`;

exports[`Search > search with container filter > caches previous calculations 1`] = `
[
  "3dpr",
  "3sib",
  "a3d1",
  "a3d2",
  "a3d3",
  "a3d4",
  "a3dC",
  "acgl",
  "adda",
  "adrc",
  "aebr",
  "aebr",
  "aebr",
  "afbr",
  "afbr",
  "afbr",
  "albc",
  "alou",
  "alst",
  "alte",
  "altr",
  "altt",
  "amgl",
  "amve",
  "assp",
  "aud ",
  "auxC",
  "auxi",
  "auxl",
  "auxl",
  "auxv",
  "avc1",
  "avc1",
  "avc1",
  "avc2",
  "avc2",
  "avc2",
  "avc3",
  "avc3",
  "avc3",
  "avc4",
  "avc4",
  "avc4",
  "avcC",
  "avcC",
  "avcp",
  "avcp",
  "avll",
  "avss",
  "base",
  "brnd",
  "brst",
  "btrt",
  "buff",
  "bxml",
  "casg",
  "cclv",
  "cclv",
  "ccst",
  "cdsc",
  "chnl",
  "cinf",
  "clap",
  "clap",
  "clli",
  "clli",
  "co64",
  "colr",
  "colr",
  "cprt",
  "crtt",
  "csch",
  "csgp",
  "cslg",
  "cstg",
  "ctts",
  "dcfi",
  "deps",
  "dhec",
  "dimg",
  "dimm",
  "dinf",
  "dmax",
  "dmed",
  "dmix",
  "dobr",
  "dobr",
  "dobr",
  "dpnd",
  "drap",
  "dref",
  "drep",
  "dtrt",
  "edts",
  "elng",
  "elst",
  "enc3",
  "enca",
  "enca",
  "encf",
  "encm",
  "encp",
  "encs",
  "enct",
  "encu",
  "encv",
  "eob ",
  "eos ",
  "eqiv",
  "eqiv",
  "etyp",
  "evc1",
  "evcC",
  "evcr",
  "evs1",
  "evs2",
  "evsC",
  "exbl",
  "fade",
  "favc",
  "fdel",
  "fdel",
  "fdp ",
  "fecr",
  "fiin",
  "fire",
  "fobr",
  "fobr",
  "fobr",
  "font",
  "fpar",
  "free",
  "frma",
  "gitn",
  "grid",
  "grpl",
  "hapt",
  "hdlr",
  "hev1",
  "hev1",
  "hev2",
  "hev2",
  "hev3",
  "hev3",
  "hind",
  "hinf",
  "hint",
  "hint",
  "hmhd",
  "hnti",
  "hvc1",
  "hvc1",
  "hvc2",
  "hvc2",
  "hvc3",
  "hvc3",
  "hvcC",
  "hvcC",
  "hvt1",
  "hvt2",
  "hvt3",
  "hvtC",
  "iaug",
  "icpv",
  "idat",
  "iinf",
  "iloc",
  "iloc",
  "imdt",
  "imir",
  "infe",
  "ipco",
  "ipma",
  "ipro",
  "iprp",
  "iref",
  "iroi",
  "irot",
  "iscl",
  "ispe",
  "jpgC",
  "keys",
  "kind",
  "lbli",
  "ldep",
  "leva",
  "lhe1",
  "lht1",
  "lhv1",
  "lhvC",
  "lhvC",
  "linf",
  "lsel",
  "ludt",
  "m4ds",
  "maxr",
  "md5i",
  "mdcv",
  "mdcv",
  "mdft",
  "mdhd",
  "mdia",
  "mebx",
  "mehd",
  "meta",
  "meta",
  "mett",
  "metx",
  "minf",
  "minp",
  "mixn",
  "mp7b",
  "mp7t",
  "mskC",
  "msrc",
  "mstv",
  "mvc1",
  "mvc2",
  "mvc3",
  "mvc4",
  "mvcC",
  "mvcP",
  "mvcg",
  "mvci",
  "mvd1",
  "mvd2",
  "mvd3",
  "mvd4",
  "mvdC",
  "mvex",
  "mvhd",
  "mvif",
  "mvra",
  "nalm",
  "nmhd",
  "npck",
  "null",
  "nump",
  "oinf",
  "oinf",
  "opeg",
  "opth",
  "oref",
  "padb",
  "paen",
  "pano",
  "pano",
  "pano",
  "pase",
  "pasp",
  "pasp",
  "pasr",
  "payt",
  "pitm",
  "pixi",
  "pm2t",
  "pmax",
  "pred",
  "prol",
  "prtp",
  "pss1",
  "qlif",
  "rap ",
  "rash",
  "recr",
  "refs",
  "res3",
  "resa",
  "resa",
  "resf",
  "resm",
  "resp",
  "ress",
  "rest",
  "resu",
  "resv",
  "rinf",
  "rloc",
  "rm2t",
  "roll",
  "rref",
  "rrgn",
  "rror",
  "rrtp",
  "rsrp",
  "rssr",
  "rtcp",
  "rtp ",
  "rtp ",
  "rtp ",
  "sabt",
  "saio",
  "saiz",
  "sap ",
  "sbas",
  "sbgp",
  "sbtt",
  "scal",
  "schi",
  "schm",
  "scif",
  "scnm",
  "scrb",
  "sdep",
  "sdp ",
  "sdtp",
  "segr",
  "seib",
  "seii",
  "sgpd",
  "sinf",
  "skip",
  "sm2t",
  "smhd",
  "snim",
  "snro",
  "snut",
  "soun",
  "spid",
  "spid",
  "spli",
  "splt",
  "spor",
  "spor",
  "srat",
  "srpp",
  "srtp",
  "ssld",
  "sstl",
  "stbl",
  "stco",
  "stcp",
  "stdp",
  "ster",
  "ster",
  "sthd",
  "stmg",
  "stmi",
  "stpe",
  "stpp",
  "strd",
  "stri",
  "strk",
  "stsa",
  "stsc",
  "stsd",
  "stsg",
  "stsh",
  "stss",
  "stsz",
  "stti",
  "stts",
  "stvi",
  "stxt",
  "stz2",
  "subp",
  "subs",
  "subs",
  "subt",
  "subt",
  "sulm",
  "svc1",
  "svc2",
  "svcC",
  "svcM",
  "svcP",
  "svdr",
  "svip",
  "svmC",
  "svop",
  "svpr",
  "swfr",
  "swtc",
  "swtk",
  "swto",
  "sync",
  "tbas",
  "tbas",
  "tele",
  "thmb",
  "thmb",
  "tibr",
  "tims",
  "tiri",
  "tkhd",
  "tlou",
  "tmax",
  "tmin",
  "tols",
  "totl",
  "tpay",
  "tpyl",
  "trak",
  "tran",
  "tref",
  "trep",
  "trex",
  "trgr",
  "trif",
  "trpy",
  "tsas",
  "tscl",
  "tsel",
  "tsro",
  "tssy",
  "tstb",
  "tsyn",
  "ttyp",
  "txtC",
  "tyco",
  "udes",
  "udta",
  "uri ",
  "uriI",
  "urim",
  "url ",
  "urn ",
  "uuid",
  "vdep",
  "vide",
  "vipr",
  "vlab",
  "vmhd",
  "volv",
  "vopi",
  "vplx",
  "vref",
  "vreg",
  "vsib",
  "vttC",
  "vvc1",
  "vvcC",
  "vvcN",
  "vvcN",
  "vvcb",
  "vvi1",
  "vvnC",
  "vvs1",
  "vwdi",
  "vwid",
  "wbbr",
  "wbbr",
  "wbbr",
  "wipe",
  "wvtt",
  "xml ",
  "zoom",
]
`;

exports[`Search > search with other filters > with a spec filter 1`] = `
[
  "!mof",
  "!mov",
  "!six",
  "!ssx",
  "adda",
  "adrc",
  "alou",
  "alst",
  "altr",
  "amve",
  "assp",
  "auxl",
  "auxv",
  "avc1",
  "brnd",
  "btrt",
  "bxml",
  "casg",
  "cclv",
  "cdsc",
  "chnl",
  "cinf",
  "clap",
  "clli",
  "co64",
  "colr",
  "comp",
  "cprt",
  "csch",
  "csgp",
  "cslg",
  "ctts",
  "dimm",
  "dinf",
  "dmax",
  "dmed",
  "dmix",
  "drap",
  "dref",
  "drep",
  "edts",
  "elng",
  "elst",
  "enc3",
  "enca",
  "enca",
  "encf",
  "encm",
  "encp",
  "encs",
  "enct",
  "encu",
  "encv",
  "etyp",
  "fdel",
  "fdel",
  "fdp ",
  "fecr",
  "fiin",
  "fire",
  "font",
  "fpar",
  "free",
  "frma",
  "ftyp",
  "gitn",
  "grpl",
  "hapt",
  "hdlr",
  "hind",
  "hinf",
  "hint",
  "hint",
  "hmhd",
  "hnti",
  "icpv",
  "idat",
  "iinf",
  "iloc",
  "iloc",
  "imda",
  "imdt",
  "infe",
  "ipco",
  "ipma",
  "ipro",
  "iprp",
  "iref",
  "iso2",
  "iso3",
  "iso4",
  "iso5",
  "iso6",
  "iso7",
  "iso8",
  "iso9",
  "isoa",
  "isob",
  "isoc",
  "isom",
  "keys",
  "kind",
  "leva",
  "ludt",
  "maxr",
  "mdat",
  "mdcv",
  "mdhd",
  "mdia",
  "mebx",
  "mehd",
  "meta",
  "meta",
  "mett",
  "metx",
  "mfhd",
  "mfra",
  "mfro",
  "minf",
  "moof",
  "moov",
  "mp71",
  "mp7b",
  "mp7t",
  "msrc",
  "mvex",
  "mvhd",
  "nmhd",
  "npck",
  "null",
  "nump",
  "otyp",
  "padb",
  "paen",
  "pasp",
  "pasr",
  "payt",
  "pdin",
  "pitm",
  "pm2t",
  "pmax",
  "prft",
  "prol",
  "prtp",
  "rap ",
  "rash",
  "relo",
  "res3",
  "resa",
  "resa",
  "resf",
  "resm",
  "resp",
  "ress",
  "rest",
  "resu",
  "resv",
  "rinf",
  "rm2t",
  "roll",
  "rrtp",
  "rsrp",
  "rssr",
  "rtcp",
  "rtp ",
  "rtp ",
  "rtp ",
  "saio",
  "saiz",
  "sap ",
  "sbgp",
  "sbtt",
  "schi",
  "schm",
  "scrb",
  "sdp ",
  "sdtp",
  "segr",
  "sgpd",
  "sidx",
  "sinf",
  "skip",
  "sm2t",
  "smhd",
  "snim",
  "snro",
  "soun",
  "srat",
  "srpp",
  "srtp",
  "ssix",
  "stbl",
  "stco",
  "stcp",
  "stdp",
  "ster",
  "sthd",
  "stmi",
  "stpp",
  "strd",
  "stri",
  "strk",
  "stsc",
  "stsd",
  "stsg",
  "stsh",
  "stss",
  "stsz",
  "stts",
  "stvi",
  "stxt",
  "styp",
  "stz2",
  "subs",
  "subt",
  "subt",
  "tele",
  "tfdt",
  "tfhd",
  "tfra",
  "thmb",
  "tims",
  "tkhd",
  "tlou",
  "tmax",
  "tmin",
  "totl",
  "tpay",
  "tpyl",
  "traf",
  "trak",
  "tref",
  "trep",
  "trex",
  "trgr",
  "trpy",
  "trun",
  "tsel",
  "tsro",
  "tssy",
  "ttyp",
  "txtC",
  "tyco",
  "udta",
  "unif",
  "uri ",
  "uriI",
  "urim",
  "url ",
  "urn ",
  "uuid",
  "vdep",
  "vide",
  "vmhd",
  "volv",
  "vplx",
  "xml ",
]
`;
